index css basic design, post and user create routes added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,42 @@
 <html lang="en">
-<%- include("./templates/head") -%>
+<head>
+    <%- include("./templates/head") -%>
+    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/header.css">
+</head>
 <body>
-    <p>Hello</p>
+    <header>
+        <button>Create post</button>
+    </header>
+    <div id="post-display">
+        <div class="post">
+            <h1 class="title">Title</h1>
+            <p class="author">Author</p>
+            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <button class="read-more-btn">READ MORE</button>
+            <p class="posted">Posted</p>
+        </div>
+        <div class="post">
+            <h1 class="title">Title</h1>
+            <p class="author">Author</p>
+            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <button class="read-more-btn">READ MORE</button>
+            <p class="posted">Posted</p>
+        </div>
+        <div class="post">
+            <h1 class="title">Title</h1>
+            <p class="author">Author</p>
+            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <button class="read-more-btn">READ MORE</button>
+            <p class="posted">Posted</p>
+        </div>
+        <div class="post">
+            <h1 class="title">Title</h1>
+            <p class="author">Author</p>
+            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <button class="read-more-btn">READ MORE</button>
+            <p class="posted">Posted</p>
+        </div>
+    </div>
 </body>
 </html>
