user creation route complete, database tables added programatically

--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -3,7 +3,7 @@
     <%- include("./templates/head") -%>
 </head>
 <body>
-    <form>
+    <form method="POST" action="post/new-post">
         <label for="title">
             Title
         </label>
