--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,37 +6,19 @@
 </head>
 <body>
     <header>
-        <button>Create post</button>
+        <button onclick="location.href='post/create'">Create post</button>
+        <button onclick="location.href='user/create'">Create user</button>
     </header>
     <div id="post-display">
+        <% posts.forEach((post) => { %>
         <div class="post">
-            <h1 class="title">Title</h1>
-            <p class="author">Author</p>
-            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+            <h1 class="title"><%= post.title %></h1>
+            <p class="author"><%= post.author %></p>
+            <p class="description"><%= post.text %></p>
             <button class="read-more-btn">READ MORE</button>
-            <p class="posted">Posted</p>
+            <p class="posted">Posted <%= post.createdat.getDay() %>-<%= post.createdat.getMonth() %>-<%= post.createdat.getFullYear() %></p>
         </div>
-        <div class="post">
-            <h1 class="title">Title</h1>
-            <p class="author">Author</p>
-            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-            <button class="read-more-btn">READ MORE</button>
-            <p class="posted">Posted</p>
-        </div>
-        <div class="post">
-            <h1 class="title">Title</h1>
-            <p class="author">Author</p>
-            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-            <button class="read-more-btn">READ MORE</button>
-            <p class="posted">Posted</p>
-        </div>
-        <div class="post">
-            <h1 class="title">Title</h1>
-            <p class="author">Author</p>
-            <p class="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-            <button class="read-more-btn">READ MORE</button>
-            <p class="posted">Posted</p>
-        </div>
+        <% }) %>
     </div>
 </body>
 </html>
