--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,8 @@
 <body>
     <header>
         <button onclick="location.href='post/create'">Create post</button>
-        <button onclick="location.href='user/create'">Create user</button>
+        <button onclick="location.href='user/create'">Create account</button>
+        <button onclick="location.href='user/login'">Login</button>
     </header>
     <div id="post-display">
         <% posts.forEach((post) => { %>
