user delete route added

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -13,5 +13,7 @@
                     <button onclick="location.href=`post/${<%= post.id %>}`">Read more</button>
             </div>
         <% }) %>
+
+        <button onclick="location.href='user/delete'">Delete user</button>
 </body>
 </html>
