--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <header>
         <button onclick="location.href='post/create'">Create post</button>
         <button onclick="location.href='user/create'">Create account</button>
-        <button onclick="location.href='user/login'">Login</button>
+        <button onclick="location.href='login'">Login</button>
     </header>
     
     <%- include("./templates/post-display") -%>
