--- a/views/user.ejs
+++ b/views/user.ejs
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Profile</h1>
-    <button onclick="location.href='logout'">Logout</button>
+    <button onclick="location.href='/logout'">Logout</button>
     <p>username: <%= profile.username %></p>
     <h2>Posts:</h2>
         <% profile.posts.forEach(post => { %>
